# eups

./: .cvsignore  .gitignore  .travis.yml  MAKING_A_RELEASE  Makefile  Makefile.in  README  Release_Notes  Release_Notes.vminimal  branches  configure  configure.ac  cvsnotes  release-new-version.sh
.github/workflows/: ci.yaml
callbacks/: distribInstallPostHook.py
ci/: README.md  install.sh  script.sh
doc/: .cvsignore  Makefile  eups.tex
etc/: Makefile  Makefile.eg  ac_eups.m4  acsite.m4  config.properties  eups.el  eups_product_version  evilinstall  startup.py
etc/bash_completion.d/: Makefile  eups
examples/: Makefile  current.chain  example.table  example.version
lib/: Makefile  bunit.sh  eupspkg.default  eupspkg.sh
python/: Makefile  eupsDistribFactory.py  oeups.py  ooeups.py  server.py
python/distrib/: Distribution.py
python/eups/: Eups.py  Product.py  Uses.py  VersionCompare.py  VersionParser.py  __init__.py  app.py  cmd.py  debug.py  eups.py  eupsGetopt.py  exceptions.py  hooks.py  lock.py  setupcmd.py  sql.py  table.py  tags.py  utils.py
python/eups/db/: ChainFile.py  Database.py  VersionFile.py  __init__.py
python/eups/distrib/: Distrib.py  DistribFactory.py  Distribution.py  Repositories.py  Repository.py  __init__.py  builder.py  dream.py  eupspkg.py  pacman.py  server.py  tarball.py
python/eups/stack/: ProductFamily.py  ProductStack.py  __init__.py
site/: Makefile  startup.py
tests/: README.txt  checkVersionFile.py  dervish.table  dyldtest.table  empty.table  eupsVersion.table  externalProducts.table  fw.version  ifElse.table  python26compat.py  tablesyntax.table  testAll.py  testApp.py  testCmd.py  testCommon.py  testDb.py  testDeprecated.py  testDyldLibraryPath.py  testEups.py  testMisc.py  testProduct.py  testServerAll.py  testServerLSST.py  testServerLocal.py  testServerSsh.py  testServerWeb.py  testSpaces.py  testStack.py  testTable.py  testTags.py  testUtils.py  testVersionCompare.py  test_eups.py  test_eups_integration.py  test_eupspkg.py  test_setups.py  test_table.py
tests/Linux/tcltk/8.5a4/ups/: tcltk.table
tests/testEupsIntegration/: testDyldLibraryPath.sh  testSpaces.sh  testUserTag.sh
tests/testEupspkg/: setup.sh  teardown.sh  testTapPackageDetectionEnvvar.sh  testTapPackageDetectionFile.sh
tests/testEupspkg/cfitsio.orig/ups/: eupspkg.cfg.sh
tests/testSetups/: setup.sh  testSetups.csh  testSetups.sh
tests/testSpaces/: setup.sh  teardown.sh  testSetup.sh
tests/ups/: test1.table
tests/ups_db/cfitsio/: 3006.2.version
tests/ups_db/doxygen/: 1.5.7.1.version  current.chain
tests/ups_db/eigen/: 2.0.0.version
tests/ups_db/mpich2/: 1.0.5p4.version
tests/ups_db/python/: 2.5.2.version  2.6.version  current.chain
tests/ups_db/tcltk/: 8.5a4.version
trunk/: Makefile.in  Release_Notes  branches  configure  configure.ac
trunk/doc/: eups.tex
trunk/etc/: Makefile.eg  config.properties  eups_product_version  startup.py
trunk/python/: eupsGetopt.py
trunk/python/eups/: Eups.py  Product.py  Uses.py  VersionCompare.py  VersionParser.py  app.py  cmd.py  hooks.py  setupcmd.py  table.py  utils.py
trunk/python/eups/db/: ChainFile.py  Database.py
trunk/python/eups/distrib/: Repositories.py  __init__.py  builder.py  pacman.py  server.py  tarball.py
trunk/python/eups/stack/: ProductFamily.py  ProductStack.py
trunk/site/: Makefile
trunk/tests/: checkVersionFile.py  fw.current  fw.version  lapack-3.1.1.version  mwi.table  run  tablesyntax.table  testAll.py  testCmd.py  testCommon.py  testDb.py  testDeprecated.py  testMisc.py  testServerAll.py  testServerLocal.py  testServerSsh.py  testServerWeb.py  testTable.py  test_eups.py
trunk/tests/Linux/python/2.5.2/ups/: python.table
trunk/tests/testserver/s2/: current.list
trunk/tests/testserver/s2/info/: tagnames.txt
trunk/tests/testserver/s2/manifests/: doxygen-1.5.8.manifest
trunk/tests/ups_db/: global.tags
trunk/tests/ups_db/cfitsio/: 3006.2.version  current.chain
trunk/tests/ups_db/doxygen/: 1.5.9.version
trunk/tests/ups_db/eigen/: current.chain
trunk/tests/ups_db/mpich2/: current.chain
trunk/tests/ups_db/python/: 2.6.version
trunk/tests/ups_db/tcltk/: current.chain
trunk/ups/: eups.table.in
ups/: .cvsignore  Makefile  eups.table  eups.table.in
